Login page more indepth

--- a/LoginPage/login.html
+++ b/LoginPage/login.html
@@ -1,7 +1,31 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <script src="login.css"></script>
+    <script src="java.js"></script>
+
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
 <body>
-<h1 id="name">Login page</h1>
-<button mat-raised-button routerLink="/dashboard" routerLinkActive="active" id="button0">Dashboard</button>
-<button mat-raised-button routerLink="/login" routerLinkActive="active" id="button1">Log In</button>
-<router-outlet></router-outlet>
+
+<div class="container">
+    <div class="left1">
+        <div class="profileTitle">
+            <div class="name">Dyllen Wesley Xavier Holm</div>
+            <div class="SubTitle">Project 6</div>
+
+            <h1 id="name">Login page</h1>
+            <button mat-raised-button routerLink="/dashboard" routerLinkActive="active" id="button0">Dashboard</button>
+            <button mat-raised-button routerLink="/login" routerLinkActive="active" id="button1">Log In</button>
+            <router-outlet></router-outlet>
+
+        </div>
+    </div>
+    </div>
+</div>
 </body>
+
+</html>
